<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ecoquest"
            android:icon="@drawable/baseline_south_america_24"
            android:title="@string/menu_ecoquest" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/baseline_shopping_basket_24"
            android:title="@string/menu_shopping" />


        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/baseline_card_giftcard_24"
            android:title="@string/menu_reward" />



       </group>


            <item android:title="@string/menu_profile">
                <menu>
                    <group android:checkableBehavior="single">

                        <item android:id="@+id/nav_history"
                            android:icon="@drawable/baseline_history_24"
                            android:title="@string/menu_history" />
                        <item android:id="@+id/nav_rateus"
                            android:icon="@drawable/baseline_star_rate_24"
                            android:title="@string/menu_rateus" />
                    </group>
                </menu>
            </item>
</menu>